Fix: Troubleshooting tile layout and widths being different sizes. Added display:flex and overflow-x: hidden on .tiles

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2736,6 +2736,7 @@ input, select, textarea {
   display: flex;
   flex-wrap: wrap;
   border-top: 0;
+  overflow-x: hidden;
 }
 
 .tiles article {
@@ -2751,6 +2752,7 @@ input, select, textarea {
 	min-height: 300px;
 	height: 40vh;
 	box-shadow: none;
+	box-sizing: border-box;
 	transition: none;
 }
 
